# ZorpSh

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ai.rs  completer.rs  config.rs  main.rs  shell.rs  ui.rs
